--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     />
     <link rel="manifest" href="/manifest.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="Michael Kolesidis" />
+    <meta name="author" content="Echozoneph.online" />
     <meta
       name="description"
       content="An online scratchcard game. Do you feel lucky?"
