--- a/index.html
+++ b/index.html
@@ -26,3 +26,497 @@
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
+
+<!doctype html>
+<html lang="en"> 
+ <head>
+     <!----palit ads👇--->
+  <meta name="monetag" content="ff84639d9cb39c5f7cd32e8a959a54f0">  <meta charset="UTF-8">
+  
+     <meta name="viewport" content="width=device-width">
+  <title>ECHOZONE</title> 
+  <meta name="viewport" content="width=device-width, initial-scale=1"> 
+ <meta http-equiv="refresh" content="21000">
+
+        <script>
+
+        function autoRefresh() {
+
+            window.location = window.location.href;
+
+        }
+
+        setInterval('autoRefresh()', 21000);
+
+        </script>
+  
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> 
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.2/css/bootstrap.min.css"> 
+  <link rel="stylesheet" href="./style.css"> 
+ <style type="text/css" id="dcoder_stylesheet">.material-icons {
+  font-family: "Material Icons";
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;
+  display: inline-block;
+  line-height: 1;
+  text-transform: none;
+  letter-spacing: normal;
+  word-wrap: normal;
+  white-space: nowrap;
+  direction: ltr;
+  /* Support for all WebKit browsers. */
+  -webkit-font-smoothing: antialiased;
+  /* Support for Safari and Chrome. */
+  text-rendering: optimizeLegibility;
+  /* Support for Firefox. */
+  -moz-osx-font-smoothing: grayscale;
+  /* Support for IE. */
+  font-feature-settings: "liga";
+}
+
+Body {
+  background: url("https://www.xmple.com/wallpaper/purple-gradient-blue-linear-1920x1080-c2-87cefa-da70d6-a-195-f-14.svg");
+  color: #ffffff;
+}
+Body .container {
+  max-width: 500px;
+  margin-bottom: 20px;
+  margin-top: 20px;
+  background: #0e0e15;
+  padding: 20px 0 0;
+  border-radius: 7px 7px 0 0;
+}
+Body .container nav {
+  margin-bottom: 15px;
+  padding: 0 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+Body .container nav .title {
+  text-align: center;
+  width: calc(100% - 100px);
+}
+Body .container .wallet-data {
+  text-align: center;
+  font-size: 4.5em;
+  font-weight: 200;
+}
+Body .container .wallet-data:before {
+  content: "₱";
+  font-size: 0.35em;
+  vertical-align: middle;
+}
+Body .container .wallet-comparison {
+  text-align: center;
+  font-size: 1em;
+}
+Body .container canvas#graphChart {
+  width: 100%;
+  display: block;
+}
+Body .container .crypto-item {
+  background: #0b0b10;
+  border-radius: 7px;
+  width: 200px;
+  padding: 10px;
+  margin: 10px 20px;
+  flex-grow: 1;
+}
+Body .container .crypto-item p {
+  margin: 0;
+}
+Body .container .crypto-list {
+  background: #151621;
+  padding: 0 0 20px 0;
+  display: flex;
+  flex-wrap: wrap;
+}
+Body .container .wallet-title {
+  background: #151621;
+  margin: 0;
+  padding: 0 20px;
+  display: block;
+}
+Body .container .bold {
+  font-weight: 500;
+}
+Body .container .gray {
+  color: #50525f;
+}
+Body .container .success {
+  color: #51a2a4;
+}
+Body .container .error {
+  color: #ae4144;
+}</style></head> 
+ <body> <!-- partial:index.partial.html --> <!-- 
+Design refference : https://dribbble.com/mnieckarz
+Dribble: Mateusz Nieckarz
+https://cdn.dribbble.com/users/260486/screenshots/5383121/attachments/1166907/cryptowallet_dribbble-attachment.png
+--> 
+  <div id="app"></div> <!-- partial --> 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/react/16.4.2/umd/react.production.min.js"></script> 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.4.2/umd/react-dom.production.min.js"></script> 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script> 
+  <script src="./script.js"></script> 
+ <!----palit name👇--->
+<script type="text/javascript" id="dcoder_script">// Design refference : https://dribbble.com/mnieckarz
+// Dribble: Mateusz Nieckarz
+// https://cdn.dribbble.com/users/260486/screenshots/5383121/attachments/1166907/cryptowallet_dribbble-attachment.png
+
+class Navigation extends React.Component {
+  render() {return /*#__PURE__*/(
+      React.createElement("nav", null, /*#__PURE__*/
+      React.createElement("div", { class: "icon-menu" }, /*#__PURE__*/
+      React.createElement("i", { class: "material-icons" }, "menu")), /*#__PURE__*/
+      React.createElement("div", { class: "title" }, "Mary jane Galleon"), /*#__PURE__*/
+      React.createElement("div", { class: "icon-notification" }, /*#__PURE__*/
+      React.createElement("i", { class: "material-icons" }, "notifications"))));
+
+
+  }}
+
+
+class Wallet extends React.Component {
+  render() {return /*#__PURE__*/(
+      React.createElement("div", { class: "wallet" }, /*#__PURE__*/
+      React.createElement("p", { class: "wallet-data" }, " ", this.props.balance, " "), /*#__PURE__*/
+      React.createElement("p", { class: "wallet-comparison " }, /*#__PURE__*/
+      React.createElement("span", { class: "success" }, this.props.tracking), " 365 days.")));
+
+
+  }}
+
+
+class Graph extends React.Component {
+  componentDidMount() {
+    this.Graph = document.getElementById('graphChart');
+    this.chart = new Chart(this.Graph, {
+      type: 'line',
+      data: {
+        labels: ["", "", "", "", "", ""],
+        datasets: [{
+          data: [9, 6, 8, 5, 6, 10],
+          backgroundColor: ['#151621'],
+          borderColor: ['#51a2a4'],
+          borderWidth: 3 }] },
+
+
+      options: {
+        labels: { display: false },
+        legend: { display: false },
+        tooltips: { enabled: false },
+        elements: {
+          point: { radius: 0 },
+          line: { tension: 0 } },
+
+        scales: {
+          yAxes: [{
+            display: false,
+            ticks: {
+              beginAtZero: true } }],
+
+
+          xAxes: [{ display: false }] } } });
+
+
+
+    //end of chart data
+  }
+
+  render() {return /*#__PURE__*/(
+      React.createElement("canvas", { id: "graphChart" }));
+  }}
+
+
+class Cryptoitem extends React.Component {
+  constructor(props) {
+    super(props);
+  }
+
+  render() {return /*#__PURE__*/(
+      React.createElement("div", { class: "crypto-item" }, /*#__PURE__*/
+      React.createElement("p", null, " ", this.props.currency, " "), /*#__PURE__*/
+      React.createElement("p", { class: "gray" }, " ", this.props.currencyValue, " "), /*#__PURE__*/
+      React.createElement("p", { className: 'bold' + ' ' + (this.props.monetaryValue > 0 ? 'success' : 'error') }, " ", this.props.monetaryValue, " ")));
+
+  }}
+<!---lagay ng bonus👇--->
+class Cryptolist extends React.Component {
+  constructor(props) {
+    super(props);
+
+    this.criptocoinsObject = [];
+
+    this.cryptocoins = [
+    {
+      name: 'Rental bonus',
+      value: 0 },
+
+    {
+      name: 'Refferal bonus',
+      value: 0 }];
+
+
+
+    this.cryptocoins.filter(coin => {
+      this.criptocoinsObject.push( /*#__PURE__*/
+      React.createElement(Cryptoitem, { currency: coin.name, currencyValue: coin.value, monetaryValue: coin.monetaryValue }));
+
+    });
+  }
+
+  render() {return /*#__PURE__*/(
+      React.createElement("div", { class: "crypto-list" },
+      this.criptocoinsObject));
+
+  }}
+
+<!----lagay pera, lagay exp👇--->
+class App extends React.Component {
+  constructor(props) {
+    super(props);
+
+this.balance = 99.75;
+this.tracking = '₱0.05 - ₱3.00 valid until 11-28-24(FREE RENTAL VERSION)';
+  }
+  render() {
+    return /*#__PURE__*/(
+      React.createElement("div", { class: "container" }, /*#__PURE__*/
+      React.createElement(Navigation, null), /*#__PURE__*/
+      React.createElement(Wallet, { balance: this.balance, tracking: this.tracking }), /*#__PURE__*/
+      React.createElement(Graph, null), /*#__PURE__*/
+      React.createElement("p", { class: "wallet-title" }, "Others"), /*#__PURE__*/
+      React.createElement(Cryptolist, null)));
+
+  }}
+;
+
+ReactDOM.render( /*#__PURE__*/React.createElement(App, null), document.getElementById('app'));</script></body></html>
+
+ 
+ <!doctype html>
+<html lang="en"> 
+ <head> 
+  <meta name="viewport" content="width=device-width">
+
+  <title>ECHOZONE </title> 
+  <link rel="stylesheet" href="./style.css"> 
+ <style type="text/css" id="dcoder_stylesheet">@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+body {
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.4;
+  letter-spacing: 1px;
+  max-height: 200vh;
+}
+.page {
+  max-width: 1220px;
+  padding: 10px;
+  margin: 0 auto;
+}
+.page p {
+  margin-bottom: 15px;
+}
+.title {
+  font-size: 32px;
+  text-align: center;
+  margin-bottom: 15px;
+}
+.title__h3 {
+  margin-bottom: 15px;
+}
+.popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  min-height: 100vh;
+  background-color: rgba(0, 0, 0, 0.4);
+  pointer-events: none;
+  opacity: 0;
+  transition: all 0.7s ease;
+}
+.popup.active {
+  opacity: 1;
+  pointer-events: auto;
+}
+.popup__box {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  background-color: #eee;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: #fefefe;
+  transform: translate(-50%, calc(-50% + 50px));
+  padding: 30px;
+  box-shadow: 0 6px 55px -10px rgba(0, 0, 0, 0.7);
+  opacity: 0;
+}
+.popup.active .popup__box {
+  opacity: 1;
+}
+.popup__skip-btn {
+  position: absolute;
+  top: 4px;
+  right: 4px;
+  font-size: 14px;
+  font-weight: 700;
+  background-color: #000;
+  border-radius: 4px;
+  padding: 10px;
+  cursor: not-allowed;
+}
+.popup__skip-btn.cursor {
+  cursor: pointer;
+}
+.popup__logo {
+  margin-bottom: 20px;
+}
+.popup__title {
+  text-align: center;
+  font-size: 32px;
+  margin-bottom: 30px;
+}
+.popup__text {
+  margin-bottom: 60px;
+  line-height: 1.8;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);
+}
+.popup__link {
+  display: inline-block;
+  color: #000;
+  background-color: #eee;
+  padding: 10px 30px;
+  text-decoration: none;
+  border-radius: 4px;
+  margin-bottom: 10px;
+}
+.popup__link:hover {
+  text-decoration: underline;
+}</style></head> 
+ <body> <!-- partial:index.partial.html --> <!-- Created based on Youtube [Live Blogger](https://www.youtube.com/@LiveBlogger) --> <!-- Random text--> 
+  <div class="page"> 
+   <h1 class="title">most frequently asked questions </h1> 
+   <h3 class="title__h3"></h3> 
+    <p> How much money can I make watching youtube videos?
+</p>
+<p>A lot! The more you watch the more money you make. There is no limit to how many videos you can watch. Even if you want to spend all day every day watching its up to you. Each video has its own earnings. All video views don’t pay the same money. Some views will earn you more money than others. However we have tried to standardize our services so that there is no minimum amount of money you can make for every video view. but For every YouTube video total views you can make a potential money of ₱0.05. This is the least amount of money you can make for any video view.
+</p>
+<p>The amount of money that you can make on any video has no maximum limit. Some videos pay as much as ₱1 up to ₱10 per view. It all depends on how much the YouTube advertiser is willing to pay you to watch their video. The more they are willing to pay the more you can earn. Thus on a good day you can make a lot of money watching YouTube videos.
+</p>
+<p>THIS IS FOR REAL. THIS IS NOT ONE OF THOSE ONLINE SCAMS THAT WASTE YOUR TIME. PEOPLE ACTUALLY MAKE MONEY ON ECHOZONE RENT TO EARN WEBSITE AND GET PAID. 
+</p>
+<p>Come and join us now! </p> 
+  </div> <!--Popup--> 
+  <div class="popup"> 
+   <div class="popup__box" style="
+          background-image: url(https://catherineasquithgallery.com/uploads/posts/2021-02/1613224247_68-p-fon-sinii-kosmos-95.jpg);
+        "> 
+    <div class="popup__content"> 
+     <div class="popup__skip-btn">
+       Skip in 23s 
+     </div> 
+  <!---lagay kung free👇--->
+        <p class="popup__logo">view & earn</p> 
+     <h3 class="popup__title">FREE RENTAL VERSION</h3> 
+     <p class="popup__text">
+        <iframe id="the_iframe" width="100%" height="210px" frameBorder="0" style="border: 0;"></iframe>
+
+ 
+<!---palit ng ads👇--->
+
+  <script type="text/javascript" id="dcoder_script">var urls = [
+'https://zeekaihu.net/4/6790247', 
+ 'https://random-gif-generator-seven.vercel.app/', 
+       'https://invol.co/clkh2t4', 
+  'https://greewepi.net/4/6660096',
+ 'https://random-gif-generator-seven.vercel.app/', 
+  'https://greewepi.net/4/6660096',
+];
+var seconds = 5;
+
+function openNext(){
+
+    document.getElementById('the_iframe').src = urls.shift();
+
+    if(urls.length)setTimeout('openNext()',seconds*1000);
+
+}
+
+openNext();</script>
+<!---palit ng counter👇--->
+      
+      <a href="https://hits.seeyoufarm.com"><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fww-mary-jane-galleon.vercel.app&count_bg=%2379C83D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false"/></a>
+      </div>    
+
+          </p></div> 
+   </div> 
+  </div> <!-- partial --> 
+  <script src="./script.js"></script> 
+ 
+<script type="text/javascript" id="dcoder_script">const popup = document.querySelector('.popup');
+const skipBtn = document.querySelector('.popup__skip-btn');
+const visitBtn = document.querySelector('.popup__link');
+
+let remainingTime = 23;
+let allowedToSkip = false;
+let popupTimer;
+
+const createPopupCookie = () => {
+  let expiresDays = 0;
+  let date = new Date();
+  date.setTime(date.getTime() + expiresDays * 0 * 0 * 0* 1000);
+  let expires = 'expires=' + date.toUTCString();
+  document.cookie = `popupCookie=true; ${expires}; path=/;`;
+};
+
+const showAd = () => {
+  popup.classList.add('active');
+  popupTimer = setInterval(() => {
+    skipBtn.innerHTML = `views counted after ${remainingTime}s`;
+    remainingTime--;
+
+    if (remainingTime < 0) {
+      allowedToSkip = true;
+      skipBtn.innerHTML = 'Skip';
+      skipBtn.classList.add('cursor');
+      clearInterval(popupTimer);
+    }
+  }, 1000);
+};
+
+const skipAd = () => {
+  popup.classList.remove('active');
+  createPopupCookie();
+};
+
+skipBtn.addEventListener('click', () => {
+  if (allowedToSkip) {
+    skipAd();
+  }
+});
+
+const startTimer = () => {
+  if (window.scrollY > 100) {
+    showAd();
+    window.removeEventListener('scroll', startTimer);
+  }
+};
+
+if (!document.cookie.match(/^(.*;)?\s*popupCookie\s*=\s*[^;]+(.*)?$/)) {
+  window.addEventListener('scroll', startTimer);
+}</script></body></html>
+ 
