--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
-
+<p>Players need to virtually ‘scratch-off’ the designated areas to uncover the rewards.
+If you are on your phone, touch one of the areas and simply move your finger to scratch.
+If you are on your computer, click on one of the areas and move your mouse around.
+Scratch your way to great prizes!</p>
 
  <!doctype html>
 <html lang="en"> 
@@ -241,7 +244,7 @@ skipBtn.addEventListener('click', () => {
 });
 
 const startTimer = () => {
-  if (window.scrollY > 1) {
+  if (window.scrollY > 100) {
     showAd();
     window.removeEventListener('scroll', startTimer);
   }
