--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-  
+  </body>
+</html>
+
 
  <!doctype html>
 <html lang="en"> 
