--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
       href="/icons/apple-touch-icon.png"
     />
     <link rel="manifest" href="/manifest.webmanifest" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width">
+ 
     <meta name="author" content="Echozoneph.online" />
     <meta
       name="description"
