--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<div><iframe src="https://roaring-dodol-d54c59.netlify.app/" style="border:0px #ffffff none;" name="myiFrame" scrolling="no" frameborder="1" marginheight="0px" marginwidth="0px" height="400px" width="600px" allowfullscreen></iframe>
-</div>
+
 
  
 
@@ -28,6 +27,8 @@
     <title>Scratch Bonanza</title>
   </head>
   <body>
+   <iframe src="https://roaring-dodol-d54c59.netlify.app/" style="border:0px #ffffff none;" name="myiFrame" scrolling="no" frameborder="1" marginheight="0px" marginwidth="0px" height="400px" width="600px" allowfullscreen></iframe>
+   
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
